--- a/public/styles.css
+++ b/public/styles.css
@@ -9,11 +9,10 @@ body {
 
 button {
 
-    font-size: 24px;
-    background-color: #FEB265;
-    color: white;
-    border-radius: 30px;
-    padding: 3px 7px;
-    opacity: 0.9;
-    font-family: Eurostile;
+    font-size: 30px;
+    background-color: rgb(39, 27, 41);
+    color: rgb(216, 208, 133);
+    border-radius: 5px;
+    padding: 4px 4px;
+    font-family:  "Helvetica Neue","Helvetica", sans-serif;
   }
